✨ hightlighter, vite-raw, basic demo

--- a/docs/components/theme.css
+++ b/docs/components/theme.css
@@ -1,7 +1,11 @@
 html.dark {
   background-color: var(--color-light);
 }
-
 html {
   background-color: var(--color-graySuperLight);
+}
+
+.highlighter > pre,
+.highlighter > pre > code {
+  background-color: transparent !important;
 }
