--- a/docs/components/theme.css
+++ b/docs/components/theme.css
@@ -9,21 +9,22 @@ html {
 .highlighter > pre > code {
   background-color: transparent !important;
 }
-/* 
-.highlighter > pre > code {
-  width: auto !important;
-}
-
-.highlighter > pre {
-  display: block !important;
-  min-width: 100px !important;
-  width: 100% !important;
-  overflow-x: auto !important;
-} */
 
 code {
-  background-color: var(--color-grayLight);
+  background-color: var(--color-graySuperLight);
   color: var(--color-dark);
   padding: 0.2em 0.4em;
   font-size: 14px;
+}
+
+.link > code {
+  color: inherit;
+}
+
+.dark .link > code {
+  background-color: var(--color-white);
+}
+
+.highlighter code {
+  padding: 0;
 }
